<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juanagu.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/txt_title"
        style="@style/Typography.Title.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/portfolio.title"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        app:layout_constraintTop_toTopOf="@+id/activity_main" />

    <Button
        android:id="@+id/btn_spotify"
        style="@style/Button.Portfolio"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/spotify_streamer"
        android:theme="@style/Button.Portfolio"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <Button
        android:id="@+id/btn_scores_app"
        style="@style/Button.Portfolio"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:theme="@style/Button.Portfolio"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        app:layout_constraintTop_toBottomOf="@+id/btn_spotify" />

    <Button
        android:id="@+id/btn_library_app"
        style="@style/Button.Portfolio"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:theme="@style/Button.Portfolio"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        app:layout_constraintTop_toBottomOf="@+id/btn_scores_app" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        style="@style/Button.Portfolio"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:theme="@style/Button.Portfolio"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        app:layout_constraintTop_toBottomOf="@+id/btn_library_app" />

    <Button
        android:id="@+id/btn_bacon_reader"
        style="@style/Button.Portfolio"
        android:layout_height="wrap_content"
        android:text="@string/bacon_reader"
        android:theme="@style/Button.Portfolio"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        app:layout_constraintTop_toBottomOf="@+id/btn_build_it_bigger" />

    <Button
        android:id="@+id/btn_capstone"
        style="@style/Button.Portfolio.Highlight"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:theme="@style/Button.Portfolio.Highlight"
        app:layout_constraintLeft_toLeftOf="@+id/activity_main"
        app:layout_constraintRight_toRightOf="@+id/activity_main"
        app:layout_constraintTop_toBottomOf="@+id/btn_bacon_reader" />


</android.support.constraint.ConstraintLayout>
